adding the prompt as a comment at the first line

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- the prompt : in this html refine the card and the reusability of the code, and make it more professional -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
